--- a/Dockerfile.weaver
+++ b/Dockerfile.weaver
@@ -1,14 +1,18 @@
 FROM openjdk:17-jdk-slim
 
-RUN apt-get update && apt-get install -y curl && apt-get clean
+RUN apt-get update && apt-get install -y curl maven git && apt-get clean
 
 WORKDIR /app
 
-RUN curl -C - -L -o /app/goblinWeaver-2.1.0.jar https://github.com/Goblin-Ecosystem/goblinWeaver/releases/download/v2.1.0/goblinWeaver-2.1.0.jar
+ARG CACHE_VER=24
+RUN git clone -b ianressa/license https://github.com/ianressa/goblinweaver.git /app
+RUN git pull origin ianressa/license
 
-RUN chmod -R 777 /app
+RUN mvn clean package
+
+RUN chmod -R 777 /app/target
 
 # Entry point
-CMD ["java", "-Dneo4jUri=bolt://neo4jMaven:7687", "-Dneo4jUser=neo4j", "-Dneo4jPassword=Password1", "-jar", "/app/goblinWeaver-2.1.0.jar", "noUpdate"]
+CMD sleep 5; java -Dneo4jUri=bolt://neo4jMaven:7687 -Dneo4jUser=neo4j -Dneo4jPassword=Password1 -jar /app/target/goblinWeaver-2.1.0.jar noUpdate
 
 EXPOSE 8080
